--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -2,7 +2,7 @@ name: Sync Fork
 
 on:
   schedule:
-    - cron: '0 */8 * * *' # every 30 minutes
+    - cron: '0 12 * * *'
   workflow_dispatch: # on button click
 
 jobs:
